@@ -1,6 +1,5 @@
 package mars.mips.dump;
 
-import mars.*;
 import mars.util.*;
 
 import java.util.*;
@@ -48,7 +47,7 @@ public class DumpFormatLoader {
     private static final String SYSCALL_INTERFACE = "DumpFormat.class";
     private static final String CLASS_EXTENSION = "class";
 
-    private static ArrayList formatList = null;
+    private static List<DumpFormat> formatList = null;
 
     /**
      * Dynamically loads dump formats into an ArrayList.  This method is adapted from
@@ -57,23 +56,23 @@ public class DumpFormatLoader {
      * in Java".  Also see the ToolLoader and SyscallLoader classes elsewhere in MARS.
      */
 
-    public ArrayList loadDumpFormats() {
+    public List<DumpFormat> loadDumpFormats() {
         // The list will be populated only the first time this method is called.
         if (formatList == null) {
-            formatList = new ArrayList();
+            formatList = new ArrayList<>();
             // grab all class files in the dump directory
-            ArrayList candidates = FilenameFinder.getFilenameList(this.getClass().getClassLoader(),
+            List<String> candidates = FilenameFinder.getFilenameList(this.getClass().getClassLoader(),
                     DUMP_DIRECTORY_PATH, CLASS_EXTENSION);
-            for (int i = 0; i < candidates.size(); i++) {
-                String file = (String) candidates.get(i);
+            for (String file : candidates) {
                 try {
                     // grab the class, make sure it implements DumpFormat, instantiate, add to list
                     String formatClassName = CLASS_PREFIX + file.substring(0, file.indexOf(CLASS_EXTENSION) - 1);
-                    Class clas = Class.forName(formatClassName);
+                    Class<?> clas = Class.forName(formatClassName);
                     if (DumpFormat.class.isAssignableFrom(clas) &&
                         !Modifier.isAbstract(clas.getModifiers()) &&
                         !Modifier.isInterface(clas.getModifiers())) {
-                        formatList.add(clas.newInstance());
+                        Object instance = clas.getConstructor().newInstance();
+                        formatList.add((DumpFormat) instance);
                     }
                 } catch (Exception e) {
                     System.out.println("Error instantiating DumpFormat from file " + file + ": " + e);
@@ -83,11 +82,11 @@ public class DumpFormatLoader {
         return formatList;
     }
 
-    public static DumpFormat findDumpFormatGivenCommandDescriptor(ArrayList formatList, String formatCommandDescriptor) {
+    public static DumpFormat findDumpFormatGivenCommandDescriptor(List<DumpFormat> formatList, String formatCommandDescriptor) {
         DumpFormat match = null;
-        for (int i = 0; i < formatList.size(); i++) {
-            if (((DumpFormat) formatList.get(i)).getCommandDescriptor().equals(formatCommandDescriptor)) {
-                match = (DumpFormat) formatList.get(i);
+        for (DumpFormat dumpFormat : formatList) {
+            if (dumpFormat.getCommandDescriptor().equals(formatCommandDescriptor)) {
+                match = dumpFormat;
                 break;
             }
         }
